hw2q2 code (in progress)

--- a/assignments/hw2/hw2_report.tex
+++ b/assignments/hw2/hw2_report.tex
@@ -36,7 +36,57 @@
 
 \section*{Question 2}
 \begin{enumerate}[label=\alph*.]
-    \item Q2
+    \item The impulse response function is shown in Figure \ref{fig:2a}.
+    \begin{figure}[htbp]
+        \centering
+        \includegraphics[width=0.6\textwidth]{hw2_q2a_irf.png}
+        \caption{IRF to unit shock in $e_0$}
+        \label{fig:2a}
+    \end{figure}
+    
+    Numerical results are shown in Table \ref{tab:q2a}.
+    \begin{table}
+
+        \caption{Impulse response}
+        \label{tab:q2a}
+        \centering
+        \begin{tabular}[t]{rr}
+        \hline \hline
+        t & irf\\
+        \hline
+        0 & 1.0000\\
+        1 & 1.2000\\
+        2 & 0.9600\\
+        3 & 0.7680\\
+        4 & 0.6144\\
+        \hline
+        5 & 0.4915\\
+        6 & 0.3932\\
+        7 & 0.3146\\
+        8 & 0.2517\\
+        9 & 0.2013\\
+        \hline
+        10 & 0.1611\\
+        11 & 0.1288\\
+        12 & 0.1031\\
+        13 & 0.0825\\
+        14 & 0.0660\\
+        \hline
+        15 & 0.0528\\
+        16 & 0.0422\\
+        17 & 0.0338\\
+        18 & 0.0270\\
+        19 & 0.0216\\
+        \hline
+        20 & 0.0173\\
+        21 & 0.0138\\
+        22 & 0.0111\\
+        23 & 0.0089\\
+        24 & 0.0071\\
+        \hline
+        25 & 0.0057\\
+        \end{tabular}
+        \end{table}
 \end{enumerate}
 
 \newpage
